--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -21,7 +21,7 @@
   }
 
   .container {
-    max-width: 1400px;
+    width: 1400px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -106,7 +106,7 @@
   }
 
   .menu {
-    max-width: 1400px;
+    width: 1400px;
     padding: 10px 0px;
     display: flex;
     justify-content: space-between;
